--- a/index.html
+++ b/index.html
@@ -17,5 +17,5 @@
   <p class=text1>On this site you will find links to my projects, socials and much more! Look at the navbar to get started!</p>
 </center>
   </body>
-   <body background="bg.jpg">
+   <body background=https://raw.githubusercontent.com/Dat-Dot/dat-dot.github.io/main/bg.jpg>
 </html>
