--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>
 <div class="topnav">
   <a class="active" href="index.html">Home</a>
+  <a href="projects.html">Projects</a>
 </div>
 </header>
 <center>
