--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
     <header>
 <div class="topnav">
   <a href="index.html">Home</a>
-  <a class="active" href="projects.html">Home</a>
+  <a class="active" href="projects.html">Projects</a>
 </div>
 </header>
 <center>
